delete item model and all with them, create imege.jsp for image